Modified makefile according to norm

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,10 +6,19 @@ NAME 				=	libft.a
 CC 					=	gcc
 CFLAGS 				=	-Wall -Wextra -Werror -Iinclude/private
 
-DIRS				:=	$(ODIR) $(ODIR)/conversion $(ODIR)/list $(ODIR)/memory $(ODIR)/output $(ODIR)/string
 VPATH				=	$(SDIR):$(SDIR)/conversion:$(SDIR)/list:$(SDIR)/memory:$(SDIR)/output:$(SDIR)/string
-SRCS 				:=	$(wildcard $(SDIR)/*/*.c)
-OBJS				:=	$(patsubst $(SDIR)/%.c, $(ODIR)/%.o, $(SRCS))
+
+SRCS				:=	atoi.c itoa.c tolower.c toupper.c \
+		lstadd_back.c lstclear.c lstiter.c lstmap.c lstsize.c lstadd_front.c \
+		lstdelone.c lstlast.c lstnew.c bzero.c calloc.c memchr.c memcmp.c  \
+		memcpy.c memmove.c memset.c gnl.c gnl_utils.c putchar_fd.c putendl_fd.c \
+		putnbr_fd.c putstr_fd.c isalnum.c isdigit.c strchr.c striteri.c \
+		strlcpy.c strncmp.c strtrim.c isalpha.c isprint.c strcmp.c strjoin.c \
+		strlen.c  strnstr.c substr.c isascii.c split.c strdup.c strlcat.c strmapi.c \
+		strrchr.c
+
+
+OBJS := $(patsubst %.c,$(ODIR)/%.o,$(SRCS))
 
 BRIGHT_GREEN = \033[92m
 GREEN = \033[32m
@@ -18,13 +27,13 @@ YELLOW = \033[33m
 
 all: $(NAME)
 
-welcome:
-	@echo -n "$(YELLOW)Building libft: $(RESET)"
-
-$(DIRS): | welcome
+$(ODIR):
 	@mkdir -p $@
 
-$(ODIR)/%.o: $(SDIR)/%.c | $(DIRS)
+welcome: $(ODIR)
+	@echo -n "$(YELLOW)Building libft: $(RESET)"
+
+$(ODIR)/%.o: %.c | welcome
 	@$(CC) $(CFLAGS) -c -o $@ $< && echo -n "$(BRIGHT_GREEN).$(RESET)"
 
 $(NAME): $(OBJS)
