--- a/libft/Makefile
+++ b/libft/Makefile
@@ -20,10 +20,10 @@ SRCS				:=	atoi.c itoa.c tolower.c toupper.c \
 
 OBJS := $(patsubst %.c,$(ODIR)/%.o,$(SRCS))
 
-BRIGHT_GREEN = $(shell echo -e "\033[92m")
-GREEN = $(shell echo -e "\033[32m")
-RESET = $(shell echo -e "\033[0m")
-YELLOW = $(shell echo -e "\033[33m")
+BRIGHT_GREEN = $(shell printf "\033[92m")
+GREEN = $(shell printf "\033[32m")
+RESET = $(shell printf "\033[0m")
+YELLOW = $(shell printf "\033[33m")
 
 all: $(NAME)
 
